--- a/10-IV.Rmd
+++ b/10-IV.Rmd
@@ -14,17 +14,17 @@ No! Methods like instrumental variables can help us to establish causality if we
 knitr::include_graphics("images/father-thames.jpg")
 ```
 
-The 1853-1854 Cholera outbreak in London killed 616 people. Physician [John Snow](https://en.wikipedia.org/wiki/John_Snow) was able to use data collected during this period to demonstrate that the illness was water-borne, and not transmitted via air, as was widely believed at the time. In order to better appreciate this section, let's imagine the world of John Snow in 1853 (The following section draws heavily on @freedman1991):
+The 1853-1854 Cholera outbreak in London killed 616 people. Physician [John Snow](https://en.wikipedia.org/wiki/John_Snow) was able to use data collected during this period to demonstrate that the illness was water-borne, and not transmitted via air, as was widely believed at the time. In order to better appreciate this section, let's imagine the world of John Snow in 1853^[The following is based on @freedman1991]:
 
 ```{block, type='notel'}
 * It is not yet known that germs can cause disease (or indeed, that they exist).
 * Microscopes exist, but work at rather poor resolution.
 * Most human pathogens are not visible to the naked eye, and the isolation of such microbes is still several decades away.
-* The so-called *infection theory* (i.e. infection via *germs*) has some supporters, but the dominant idea is that disease, in general, results from [*miasmas*](https://en.wikipedia.org/wiki/Miasma_theory): very small, non-living poisonous particles that float in the air - basically rotting organic matter would emanate foul air, that caused disease. Figure \@ref(fig:miasma) shows an illustration.
+* The so-called *infection theory* (i.e. infection via *germs*) has some supporters, but the dominant idea is that disease, in general, results from [*miasmas*](https://en.wikipedia.org/wiki/Miasma_theory): very small, non-living poisonous particles that float in the air - basically rotting organic matter would emanate foul air, that caused disease. The figure below shows an illustration.
 ```
 <br>
-```{r miasma, fig.cap="Robert Seymour - A Short History of the National Institutes of Health National Library of Medicine photographic archive.",echo = FALSE}
-knitr::include_graphics("images/Cholera_art.jpg")
+```{r miasma, fig.cap="Miasma in the Air. Robert Seymour - A Short History of the National Institutes of Health National Library of Medicine photographic archive.",echo = FALSE}
+knitr::include_graphics("images/Cholera_art.jpg",dpi = 75)
 ```
 
 
@@ -69,7 +69,7 @@ Table: (\#tab:snow-tab9) John Snow's table IX
 
 With table \@ref(tab:snow-tab9) in hand, Snow concluded that *if* Southwark and Vauxhall water companies had moved their water intakes upstream to where Lambeth water was taking in their supply, roughly 1,000 lives could have been saved. For proponents of the miasma theory, this was still not evidence enough, because there were also many factors that led to poor air quality in those areas.
 
-Of course Snow was proven right later on, when in 1884 Koch first isolated the cholera *vibrio*, basically confirming Snow's version of the story. But what is really interesting for us is how he was able to us his **non-experimental** data set to make his point.
+Of course Snow was proven right later on, when in 1884 Koch first isolated the cholera *vibrio*, basically confirming Snow's version of the story. But what is really interesting for us is how he was able to use his **non-experimental** data set to make his point.
 
 ### Snow's Model of Cholera Transmission
 
@@ -85,11 +85,11 @@ With this, can write model \@ref(eq:snow-mod1):
 c_i = \alpha + \delta w_i + u_i (\#eq:snow-mod1)
 \end{equation}
 
-John Snow could have used his data and assess the correlation between drinking pure water and cholera incidence, i.e. try to measure $Cov(c_i,w_i)$, or, which is the same, just run model \@ref(eq:snow-mod1) as a linear regression. There is a problem with this, however. As @deaton1997 says, 
+John Snow could have used his data and assess the correlation between drinking pure water and cholera incidence, i.e. try to measure $Cor(c_i,w_i)$, or, which is similar, just run model \@ref(eq:snow-mod1) as a linear regression. There is a problem with this, however. As @deaton1997 says, 
 
 > The people who drank impure water were also more likely to be poor, and to live in an environment contaminated in many ways, not least by the ‘poison miasmas’ that were then thought to be the cause of cholera.
 
-In other words, it does not make sense to compare someone who drinks pure water with someone with impure water, as model \@ref(eq:snow-mod1) proposes to do, because *all else is not equal*: pure water is correlated with being poor, living in bad area, bad air quality and so on - all factors that we encounter in $u_i$. This violates the crucial assumption for valid OLS estimates, $E[u_i | w_i]=0$ in this context. Another way to say this, is that $Cov(w_i, u_i) \neq 0$, implying that $w_i$ is *endogenous* in equation \@ref(eq:snow-mod1): There are factors in $u_i$ that affect both $w_i$ and $c_i$, so we cannot reasonably say that *the effect of $w$ is that...*, because things in $u_i$ move at the same time as $w_i$ moves (and we can't see those things). So, the *miasma* theorists actually had a point.
+In other words, it does not make sense to compare someone who drinks pure water with someone with impure water, as model \@ref(eq:snow-mod1) proposes to do, because *all else is not equal*: pure water is correlated with being poor, living in bad area, bad air quality and so on - all factors that we encounter in $u_i$. This violates the crucial orthogonality assumption for valid OLS estimates, $E[u_i | w_i]=0$ in this context. Another way to say this, is that $Cov(w_i, u_i) \neq 0$, implying that $w_i$ is *endogenous* in equation \@ref(eq:snow-mod1): There are factors in $u_i$ that affect both $w_i$ and $c_i$, so we cannot reasonably say that *the effect of $w$ is that...*, because things in $u_i$ move at the same time as $w_i$ moves (and we can't see those things). So, the *miasma* theorists actually had a point.
 
 Let us condition equation \@ref(eq:snow-mod1) on either value $w$ might take:
 
@@ -106,7 +106,7 @@ Simply differencing those two lines thus yields
 E[c_i | w_i = 1] - E[c_i | w_i = 0] = \delta + \left\{ E[u_i | w_i = 1] - E[u_i | w_i = 0]\right\}
 \end{equation}
 
-and we said hat it stands to reason that this last term $\left\{ E[u_i | w_i = 1] - E[u_i | w_i = 0]\right\}$ is not equal to zero, hence our regression estimate for $\delta$ would be biased the that quantity.
+and we said that it stands to reason that this last term $\left\{ E[u_i | w_i = 1] - E[u_i | w_i = 0]\right\}$ is not equal to zero, hence our regression estimate for $\delta$ would be biased by that quantity.
 
 
 
