--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
+\usepackage{animate}
 \usepackage{tcolorbox}
 \newenvironment{note}{\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]}{\end{tcolorbox}}
 \newenvironment{notel}{\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black]}{\end{tcolorbox}}
